--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* style.css */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 body {
     background-image: url(images/background.png);
     background-size: cover;
@@ -8,7 +8,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container {
@@ -32,7 +32,7 @@ body {
     border-radius: 8px;
     border:none;
     box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.4);
-    color: rgba(245, 245, 245, 0.86);
+    background-color: white;
 }
 
 #invertBtn img {
@@ -89,7 +89,6 @@ input {
 select,
 input[type="number"],
 input[type="text"] {
-    margin-top: 10px;
     width: 100%;
     padding: 10px;
     border: none;
