--- a/style.css
+++ b/style.css
@@ -1,102 +1,101 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 body {
-    background-image: url(images/background.png);
-    background-size: cover;
-    background-position: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
+  background-image: linear-gradient(230deg, #1da1f2, #002763);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.imagem {
+  position: absolute;
+  margin-bottom: 400px;
+  display: flex;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center ;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .btn-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 200px;
-    position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+  position: absolute;
 }
 
-
-
-#invertBtn{
-    border-radius: 8px;
-    border:none;
-    box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.4);
-    background-color: white;
+#invertBtn {
+  border-radius: 8px;
+  border: none;
+  box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.4);
+  background-color: white;
 }
 
 #invertBtn img {
-    display: flex;
-    width: 64px;
-    height: 64px;
+  display: flex;
+  width: 64px;
+  height: 64px;
 }
 
-#invertBtn:hover{
-    cursor:pointer;
+#invertBtn:hover {
+  cursor: pointer;
 }
 
 .input-container,
 .output-container {
-    max-width: 400px;
-    width: 400px;
-    background-color: white;
-    padding:20px;
-    border-radius: 10px;
-    margin-top:200px;
-    box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.4);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  max-width: 400px;
+  width: 400px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 200px;
+  box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 
 .input:focus,
 .select:focus {
-  outline:none;
-  border:none;
+  outline: none;
+  border: none;
 }
 
-
 input {
-    text-align: left;
-    line-height: calc(100% - 8px);
-    width:100%;
-    border:none;
-    font-size:24px;
-    background-color: white;
+  text-align: left;
+  line-height: calc(100% - 8px);
+  width: 100%;
+  border: none;
+  font-size: 24px;
+  background-color: white;
 }
 
 .select {
-    text-align-last: left;
-    font-size:16px;
+  text-align-last: left;
+  font-size: 16px;
 }
 
-.input-container{
-    justify-content: left;
-    margin-right:150px;
+.input-container {
+  justify-content: left;
+  margin-right: 150px;
 }
 
 select,
-input{
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
+input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
-
